# react-native-spine-player

./: .gitignore  .prettierrc.js  LICENSE  Readme.md  package-lock.json  package.json  spine-component.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: spine-android.cpp  spine-android.h
android/src/main/cpp/bindings/: AnimationBindings.cpp  AnimationStateBindings.cpp  AnimationStateDataBindings.cpp  AtlasAttachmentLoaderBindings.cpp  AtlasBindings.cpp  EventBindings.cpp  EventDataBindings.cpp  SkeletonBindings.cpp  SkeletonDataBindings.cpp  SkeletonJsonBindings.cpp  SkeletonRendererBindings.cpp
android/src/main/java/com/spineplayer/: SpineDrawable.java  SpineEvent.java  SpinePlayerManagerImpl.java  SpinePlayerPackage.java  SpinePlayerView.java  SpinePlayerViewPropertyManager.java
android/src/main/java/com/spineplayer/cache/: CachedTexture.java  TextureCache.java
android/src/main/java/com/spineplayer/spine/: Animation.java  AnimationNamePair.java  AnimationState.java  AnimationStateData.java  Atlas.java  AtlasAttachmentLoader.java  Event.java  EventData.java  EventType.java  Physics.java  Skeleton.java  SkeletonData.java  SkeletonJson.java  SkeletonRenderer.java
android/src/main/java/com/spineplayer/spine/bindings/: AnimationStateBindings.java  TextureCacheBindings.java
android/src/main/java/com/spineplayer/utils/: SpineThreadFactory.java  VolleyRequestQueue.java
android/src/newarch/com/spineplayer/: SpinePlayerManager.java
android/src/oldarch/com/spineplayer/: SpinePlayerManager.java
scripts/: init.ts
src/: index.ts
src/SpinePlayerView/: index.tsx  utils.ts
src/specs/: SpinePlayerViewNativeComponent.ts
